# rag

./: .env.docker  .env.example  .env_example  .gitignore  API_PLAN.md  Dockerfile  README.md  ROADMAP.md  WEB_PLAN.md  compose.yaml  pyproject.toml
cli/: __init__.py  main.py
cli/commands/: __init__.py  ask.py  index.py  search.py
configs/: default.yaml
examples/: test_semantic_chunking.py
src/api/: __init__.py  exceptions.py  main.py  schemas.py
src/api/routes/: __init__.py  ask.py  index.py  search.py
src/rag/: __init__.py  config.py  logger.py
src/rag/chunking/: __init__.py  chunk.py  markdown.py  semantic.py  splitter.py
src/rag/embedding/: __init__.py  base.py  embedder.py  faiss_store.py  qdrant_store.py  store.py
src/rag/generation/: __init__.py  llm.py  prompt.py
src/rag/ingestion/: __init__.py  document.py  language.py  loader.py  metadata.py  normalizer.py
src/rag/retrieval/: __init__.py  bm25.py  query_rewriter.py  reranker.py  searcher.py  tokenizer.py
tests/: __init__.py  test_chunking.py  test_cli.py  test_config.py  test_embedding.py  test_generation.py  test_ingestion.py  test_logger.py  test_retrieval.py  test_semantic_chunking.py
ui/: Dockerfile  dev.db  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/documents/: page.tsx
ui/app/login/: page.tsx
ui/app/register/: page.tsx
ui/app/upload/: page.tsx
ui/components/chat/: ChatInput.tsx  ChatList.tsx  (+3 more)
ui/lib/: api.ts  auth.ts  chatStore.ts  store.ts
ui/prisma/: dev.db  schema.prisma
(+15 files in other folders)
